--- a/mi_blog/templates/blog/blog_detail.html
+++ b/mi_blog/templates/blog/blog_detail.html
@@ -42,6 +42,29 @@
 			
 			<div class="cl">&nbsp;</div>
 		</div>
+		<div class="form_comment">
+			<label>Оставить комментарий</label>
+			<form action="#" method='post'>
+				<div>
+					<label>Ваш комментарий</label>
+					<textarea type='text', name='text_coments'></textarea>
+				</div>
+				<div>
+					<label>Ваш Email</label>
+					<input type='Email', name='email'>
+				</div>
+				<div>
+					<label>Ваше имя</label>
+					<input type='text', name='name'>
+					
+				</div>
+				<div>
+					<input type='submit'>
+				</div>					
+			</form>
+			
+		</div>
+
 		
 
 	</div>
